// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FolderTree > renders correctly when loading 1`] = `
<div>
  <div
    class="folder-tree-loading"
  >
    <div
      class="w-5 h-5 border-2 border-primary/25 border-t-primary rounded-full animate-spin"
    />
  </div>
</div>
`;

exports[`FolderTree > renders correctly with current folder selected 1`] = `
<div>
  <div
    class="folder-tree"
  >
    <div
      class="folder-tree-item "
    >
      <svg
        class="folder-tree-icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span
        class="folder-tree-label"
      >
        folder.root
      </span>
    </div>
    <button
      class="folder-tree-action"
    >
      <svg
        class="w-4 h-4"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5v15m7.5-7.5h-15"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span>
        folder.newFolder
      </span>
    </button>
    <div
      class="folder-tree-list"
    >
      <div
        class="folder-tree-item "
      >
        <svg
          class="folder-tree-icon folder-tree-icon--folder"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Test Folder"
        >
          Test Folder
        </span>
      </div>
      <div
        class="folder-tree-item folder-tree-item--viz"
      >
        <svg
          class="folder-tree-icon folder-tree-icon--viz"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5m.75-9l3-3 2.148 2.148A12.061 12.061 0 0116.5 7.605"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Visualization 1"
        >
          Visualization 1
        </span>
      </div>
      <div
        class="folder-tree-item folder-tree-item--viz"
      >
        <svg
          class="folder-tree-icon folder-tree-icon--viz"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5m.75-9l3-3 2.148 2.148A12.061 12.061 0 0116.5 7.605"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Visualization 2"
        >
          Visualization 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FolderTree > renders correctly with empty items 1`] = `
<div>
  <div
    class="folder-tree"
  >
    <div
      class="folder-tree-item folder-tree-item--active"
    >
      <svg
        class="folder-tree-icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span
        class="folder-tree-label"
      >
        folder.root
      </span>
    </div>
    <button
      class="folder-tree-action"
    >
      <svg
        class="w-4 h-4"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5v15m7.5-7.5h-15"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span>
        folder.newFolder
      </span>
    </button>
    <div
      class="folder-tree-list"
    >
      <div
        class="folder-tree-empty"
      >
        folder.empty
      </div>
    </div>
  </div>
</div>
`;

exports[`FolderTree > renders correctly with items 1`] = `
<div>
  <div
    class="folder-tree"
  >
    <div
      class="folder-tree-item folder-tree-item--active"
    >
      <svg
        class="folder-tree-icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span
        class="folder-tree-label"
      >
        folder.root
      </span>
    </div>
    <button
      class="folder-tree-action"
    >
      <svg
        class="w-4 h-4"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5v15m7.5-7.5h-15"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span>
        folder.newFolder
      </span>
    </button>
    <div
      class="folder-tree-list"
    >
      <div
        class="folder-tree-item "
      >
        <svg
          class="folder-tree-icon folder-tree-icon--folder"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Test Folder"
        >
          Test Folder
        </span>
      </div>
      <div
        class="folder-tree-item folder-tree-item--viz"
      >
        <svg
          class="folder-tree-icon folder-tree-icon--viz"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5m.75-9l3-3 2.148 2.148A12.061 12.061 0 0116.5 7.605"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Visualization 1"
        >
          Visualization 1
        </span>
      </div>
      <div
        class="folder-tree-item folder-tree-item--viz"
      >
        <svg
          class="folder-tree-icon folder-tree-icon--viz"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5m.75-9l3-3 2.148 2.148A12.061 12.061 0 0116.5 7.605"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="folder-tree-label"
          title="Visualization 2"
        >
          Visualization 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
